--- a/src/components/map.css
+++ b/src/components/map.css
@@ -76,6 +76,7 @@
   position: relative;
   height: 40px;
   width: 220px;
+  z-index: 100;
 }
 .select-box:before {
   content: '\f103';
@@ -129,6 +130,7 @@
   width: calc(100% - 4px);
   border: 2px solid #ccc;
   border-radius: 2px;
+  z-index: 0;
 }
 
 .geojson-toggle{
