Сделал активными все вкладки

--- a/src/index.scss
+++ b/src/index.scss
@@ -77,9 +77,9 @@
     transition: 350ms;
   }
 }
-.tab:first-child {
-  margin-left: 320px;
-}
+//.tab:first-child {
+//  margin-left: 320px;
+//}
 .tab:hover {
   cursor: pointer;
   filter: opacity(90%);
